<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="24dp"
        android:layout_marginStart="24dp">


        <TextView
            android:id="@+id/original_title_tv"
            style="@style/fragment_detail_original_title_tv"
            android:layout_marginTop="36dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/sample_movie_title" />

        <TextView
            android:id="@+id/rating_tv"
            style="@style/fragment_detail_rating_tv"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/original_title_tv"
            tools:text="@string/sample_rating" />

        <RatingBar
            android:id="@+id/rating_rb"
            style="?android:attr/ratingBarStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:numStars="5"
            android:stepSize="0.1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rating_tv"
            tools:rating="@string/sample_rating_stars" />


    </android.support.constraint.ConstraintLayout>
</layout>