<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".DetailActivity">

            <TextView
                android:id="@+id/original_title_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorAccent"
                android:gravity="center_vertical"
                android:padding="20dp"
                android:textColor="@color/md_grey_50"
                android:textSize="30sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="@string/sample_movie_title" />

            <ImageView
                android:id="@+id/movie_poster_iv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="12dp"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:layout_marginStart="12dp"
                android:layout_marginTop="12dp"
                android:adjustViewBounds="true"
                android:scaleType="fitCenter"
                app:layout_constraintEnd_toStartOf="@+id/vertical_guideline"
                app:layout_constraintHeight_min="@+id/rating_rb"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/original_title_tv"
                tools:src="@drawable/sample_movie_poster" />

            <android.support.constraint.Guideline
                android:id="@+id/vertical_guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.4" />

            <TextView
                android:id="@+id/release_date_tv"
                style="@style/detail_activity_text_views"
                android:layout_marginTop="36dp"
                android:textSize="32sp"
                app:layout_constraintStart_toStartOf="@+id/vertical_guideline"
                app:layout_constraintTop_toBottomOf="@+id/original_title_tv"
                tools:text="@string/sample_release_date" />

            <TextView
                android:id="@+id/rating_tv"
                style="@style/detail_activity_text_views"
                android:layout_marginTop="8dp"
                android:textSize="24sp"
                app:layout_constraintStart_toStartOf="@+id/vertical_guideline"
                app:layout_constraintTop_toBottomOf="@+id/release_date_tv"
                tools:text="@string/sample_rating" />

            <RatingBar
                android:id="@+id/rating_rb"
                style="?android:attr/ratingBarStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="12dp"
                android:numStars="5"
                android:stepSize="0.1"
                app:layout_constraintStart_toStartOf="@+id/vertical_guideline"
                app:layout_constraintTop_toBottomOf="@+id/rating_tv"
                tools:rating="@string/sample_rating_stars"
                android:layout_marginStart="24dp" />

            <TextView
                android:id="@+id/overview_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/movie_poster_iv"
                tools:text="@string/sample_overview" />

        </android.support.constraint.ConstraintLayout>
    </ScrollView>
</layout>